--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,7 @@ header {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  align-items: center;
   width: 100%;
 }
 
@@ -165,6 +166,7 @@ header {
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
+  margin-left: 10%;
 
 }
 
@@ -288,6 +290,12 @@ header {
   margin-right: 1em;
 }
 
+h1 {
+  color: purple;
+  background-color: green;
+  padding: 1%;
+  border-radius: 35%;
+}
 
 /**** SMALL ****/
 /*
