--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* CSS stylesheet */
 * {
   box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -107,7 +107,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content:
+  justify-content: center;
 }
 
 .the-java {
@@ -254,12 +254,11 @@ h1 {
   .header ul {
     flex-direction: column;
   }
-  
-  
+
   li {
     margin: 0;
   }
- 
+
   a{
     display: block;
   }
