--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ header {
 .down-span,
 .down-nav {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -266,9 +266,10 @@ h1 {
   .part-one img {
     width: 450px;
   }
-  .footer {
-    flex-direction: column;
-  }
+.down-span{
+  text-align: center;
+  font-size: 10px;
+}
 }
 
 /**** MEDIUM ****/
