--- a/images/Home_files/styles.css
+++ b/images/Home_files/styles.css
@@ -19,7 +19,6 @@ body {
   border-radius: 10%;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 header {
@@ -49,7 +48,6 @@ header {
 }
 
 .header img {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   border-radius: 50%;
   padding: 3%
 }
@@ -60,40 +58,35 @@ color: white;
 
 .header ul {
   list-style: none;
-  color: #0099CC;
-  background: transparent;
-  border: none;
-  text-align: center;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  text-transform: uppercase;
 }
 
 .header li {
-  margin: 0.5em;
-  border-radius: 35%;
+  margin: 1em;
 }
 
 .header a {
-  color: white;
   text-decoration: none;
-  border: 3px solid limegreen;
+  color: white;
+  border: 3px solid green;
   border-radius: 35%;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  padding: 0.3em;
-  width: 100%;
 }
 
 .header a:hover {
   color: white;
   width: 100%;
-  border-top: 5px solid #500050;
-  border-bottom: 5px solid #500050;
-  background-color: #18392b;
-  padding: 0.3em;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  border-top: 5px solid purple;
+  border-bottom: 5px solid purple;
+  background-color: green;
+  padding: 9%;
+}
+
+.logo a {
+  border: 0;
+}
+
+.logo a:hover {
+  background-color: inherit;
+  border: 0;
 }
 
 .the-java {
@@ -112,18 +105,6 @@ color: white;
   color: limegreen;
 }
 
-.changename {
-  background-color: #4CAF50; /* Green */
-}
-
-.change-name:hover {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 15px;
-  text-align: center;
-}
-
 .part-one,
 .part-two,
 .part-three,
@@ -140,11 +121,14 @@ color: white;
   width: 100%;
 }
 
+.part-one {
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 .part-one p {
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .part-one .about-me-pic {
@@ -153,8 +137,7 @@ color: white;
   align-items: center;
   justify-content: center;
   border-radius: 100%;
-  width: 50%;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  width: 100%;
 }
 
 .part-two {
@@ -195,12 +178,6 @@ color: white;
 .skills-img img {
   height: 3em;
   width: 3em;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  border-radius: 50%;
-}
-
-.skills-img img:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .footer,
@@ -256,7 +233,6 @@ color: white;
   height: 5em;
   width: 5em;
   margin-right: 1em;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .down-nav img:hover {
@@ -264,7 +240,6 @@ color: white;
   border-radius: 100%;
   background-color: purple;
   margin-right: 1em;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 /**** SMALL ****/
@@ -285,32 +260,17 @@ color: white;
 
   }
 
-  .logo img {
-    height: 100%;
-    width: 100%;
-  }
-
-.part-one {
+.logo img {
+  height: 100%;
   width: 100%;
 
 }
 
-.part-one .about-me-pic {
-  width: 50%;
+.part-one img {
+    width: 450px;
   }
-
   .footer {
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .footer img {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
 }
 
