--- a/styles.css
+++ b/styles.css
@@ -112,25 +112,11 @@ color: white;
   color: limegreen;
 }
 
-.changename {
-  background-color: #4CAF50; /* Green */
-}
-
-.change-name:hover {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 15px;
-  text-align: center;
-}
-
 .part-one,
 .part-two,
 .part-three,
 .part-four,
-.part-five,
-.sidebar {
-  border-top: 10px solid #500050;
+.part-five {
   padding: 2%;
   background-color: white;
   display: flex;
@@ -138,6 +124,28 @@ color: white;
   align-items: center;
   justify-content: center;
   width: 100%;
+}
+
+.part-one {
+  background-color: #18392b;
+}
+
+.part-two {
+  background: linear-gradient(180deg, #18392b 10%, #500050 90%);
+}
+
+.part-three,
+.part-four,
+.part-five {
+  background-color: #500050;
+}
+
+.part-one,
+.part-two,
+.part-three,
+.part-four,
+.part-five p {
+  color: white;
 }
 
 .part-one p {
@@ -267,9 +275,36 @@ color: white;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+
+
+/*** iPhone X ***/
+@@media screen and (min-width: 375px) and (max-width: 812px) {
+  .header {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.down-nav .btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-left: 50px;
+}
+}
+
 /**** SMALL ****/
 
-@media screen and (max-width: 1030px) {
+@media screen and (max-width: 1100px) {
   .header ul {
     flex-direction: column;
     padding-top: 5%;
