--- a/styles.css
+++ b/styles.css
@@ -117,13 +117,22 @@ color: white;
 .part-three,
 .part-four,
 .part-five {
-  padding: 2%;
+  padding: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   color: white;
+}
+
+h1 {
+  margin-bottom: 3%;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+h1:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 a {
@@ -221,6 +230,42 @@ a {
 }
 
 .skills-img img:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.part-five .form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 5%;
+}
+
+.part-five .form-control {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 2%;
+  border: 1px solid green;
+  padding: 1em 14em;
+}
+
+.form-control:hover {
+  border: 1px solid limegreen;
+}
+
+.btn-contact {
+  border: 1px solid limegreen;
+  background-color: #18392b;
+  color: white;
+  width: 100%;
+  padding: 1em;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.btn-contact:hover {
+  background-color: limegreen;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
