add gif and more styles  to Contact section

--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,17 @@ a {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+.contact-image {
+  border-radius: 100%;
+  padding: 1%;
+  margin: 3%;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.contact-image:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
 .footer,
 .down-span,
 .down-nav {
