--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@ color: white;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 25%;
   border-radius: 35%;
   border-width: 1px;
