--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ color: white;
   justify-content: center;
   width: 100%;
   color: white;
+  font-size: 20px;
 }
 
 .part-one h1,
@@ -373,6 +374,7 @@ color: white;
   padding: 1%;
   width: 100%;
   background: linear-gradient(180deg, #500050 10%, #18392b 90%);
+  font-size: 20px;
 }
 
 .down-span {
@@ -506,6 +508,7 @@ color: white;
   }
 }
 
+/*** I'll edit these medias later ***/
 /**** MEDIUM ****/
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
