Change h1 width, Add h1 padding.

--- a/styles.css
+++ b/styles.css
@@ -135,13 +135,14 @@ color: white;
 .part-five h1 {
   display: flex;
   margin-bottom: 3%;
+  padding: 1%;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 25%;
+  width: 50%;
   border-radius: 35%;
-  border-width: 1px;
+  border-width: 2px;
   border-style: solid;
   border-color: limegreen;
 }
