--- a/styles.css
+++ b/styles.css
@@ -420,6 +420,13 @@ padding: 1%;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+#map {
+   width: 100%;
+   height: 400px;
+   border-radius: 3%;
+   background-color: #500050;
+ }
+
 .footer,
 .down-span,
 .down-nav {
